autocomplete proforma comptado

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -26,6 +26,7 @@
         <link href="/static/app/css/app.min.1.css" rel="stylesheet">
         <link href="/static/app/css/fullcalendar.min.css" rel="stylesheet">
         <link href="/static/app/css/select.css" rel="stylesheet">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/css/bootstrap-select.min.css" rel="stylesheet">
         {% block css-content %}
         {% endblock css-content %}
         <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
@@ -800,6 +801,7 @@
         <script src="/static/app/js/jquery.simpleWeather.min.js"></script>
         <script src="/static/app/js/fullcalendar.min.js"></script>
         <script src="/static/app/js/select/select2.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.1/js/bootstrap-select.min.js"></script>
 {#        <script src="/static/app/js/index2.js"></script>#}
         <script>
             function loadDatePicker() {
