--- a/app/templates/inventario/proformas.html
+++ b/app/templates/inventario/proformas.html
@@ -4,6 +4,8 @@
 {% endblock title-bloc %}
 {% block css-content %}
     <link href="/static/app/css/sweetalert.css" rel="stylesheet">
+    <link href="/static/app/css/magicsuggest-min.css" rel="stylesheet">
+    <link href="https://raw.githubusercontent.com/truckingsim/Ajax-Bootstrap-Select/master/dist/css/ajax-bootstrap-select.min.css" rel="stylesheet">
 {% endblock css-content %}
 {% block breadcrums %}
 <div class="row">
@@ -88,6 +90,7 @@
             </div>
         </div>
     </div>
+
 </div>
 {% endblock cuerpo %}
 {% block scripts-block %}
@@ -97,7 +100,8 @@
     <script src="/static/app/js/data-tables/dataTables.responsive.js"></script>
     <script src="/static/app/js/data-tables/tables-data.js"></script>
     <script src="/static/app/js/sweet-alert/sweetalert.min.js"></script>
-
+    <script src="https://raw.githubusercontent.com/truckingsim/Ajax-Bootstrap-Select/master/dist/js/ajax-bootstrap-select.min.js"></script>
+    <script src="/static/app/js/magicsuggest-min.js"></script>
     <script>
         $(document).ready(function () {
             mostrarPedidos();
@@ -106,8 +110,57 @@
             });
         });
         $(document).ajaxStop(function () {
-            $(".select2").select2();
+            //$(".select2").select2();
+            $(".select2").selectpicker();
+
+            $('select').trigger('change');
         });
+        var ms;
+        function init_atocomple_productos(){
+            ms = $('#searchProducto').magicSuggest({
+                placeholder: 'Busque su producto',
+                data: '../get_productos_autocomplete/',
+                valueField: 'value',
+                displayField: 'text',
+                //groupBy: 'continentName',
+                mode: 'remote',
+                renderer: function(data){
+                    return '<div class="row" >' +
+                                '<div class="col-xs-12 col-sm-4"> <img src="' + data.imagen.toLowerCase() + '" style="width: 72px; height: 72px;" /></div>' +
+                                '<div class="col-xs-12 col-sm-8">'+
+                                    '<small><span><strong>Nombre: </strong>' + data.nombre +
+                                        '<br><strong>Marca: </strong>' + data.marca +
+                                        '<br><strong>Precio: </strong>' + data.precio +
+                                        ' <strong>Existencia: </strong>' + data.existencia +
+                                    '</span></small>' +
+                                '</div>' +
+                            '</div>';
+                },
+                resultAsString: true,
+                selectionRenderer: function(data){
+                    var domstr="<tr>" +
+                        "<td>"+ data.nombre +"</td>" +
+                        "<td class='serie'></td>" +
+                        "<td>" + data.marca + "</td>" +
+                        "<td class='existencia'>"+ data.existencia +"</td>" +
+                        "<td><input type='hidden' name='id' value='"+ data.id_detalle +"'><input name='cantidad' value='0' class='form-control' onchange='changeCantidadProductoDetalle(this)'></td>" +
+                        "<td class='precio'>"+ data.precio +"</td>" +
+                        "<td class='total'>0</td>" +
+                        "<td><button onclick='borarProductoDetalle(this)' class='tbn btn-danger tbn-3d'><i class='fa fa-trash fa-fw'></></button></td>" +
+                    +"</tr>"
+                    $("#table_pedido_detalle > tbody").append(domstr);
+                    ms.clear();
+                    if(data.hasOwnProperty('imagen'))
+                        return '<img src="' + data.imagen.toLowerCase() + '"  style="width: 50px; height: 50px;" />' +
+                                '<div class="name">' + data.text + '</div>';
+
+                }
+            });
+
+            ms.on('selectionchange', function(e,m){
+              alert("values: " + JSON.stringify(this.getValue()));
+            });
+        }
         function mostrarPedidos() {
             $.ajax({
                 url:"../render_listado_pedido/",
@@ -127,6 +180,7 @@
                       backdrop: 'static',
                       keyboard: false
                     });
+                    init_atocomple_productos();
                 }
             });
         }
@@ -142,6 +196,12 @@
                     if(data.code==200){
                         $("#myModal").modal('hide');
                         mostrarPedidos();
+                    }else {
+                        swal({
+                            title: "Upss.. ha ocurrido un inconveniente",
+                            text: data.mensaje,
+                            type: "warning"
+                        });
                     }
                 }
             });
@@ -228,7 +288,6 @@
                         "<td><button onclick='borarProductoDetalle(this)' class='tbn btn-danger tbn-3d'><i class='fa fa-trash fa-fw'></></button></td>" +
                     +"</tr>"
             );
-
         }
         function borarProductoDetalle(value) {
             var parent = value.closest('tr');
