--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -60,9 +60,10 @@
                     </div>
 
                     <ul class="nav navbar-nav navbar-right navbar-top-drops">
+                      {% comment %}
                         <li> <span class="search-icon"><i class="fa fa-search"></i></span>
 
-                        </li>
+                        </li>{% endcomment %}
                         {% comment %}<li class="dropdown"><a href="#" class="dropdown-toggle button-wave" data-toggle="dropdown"><i class="fa fa-envelope"></i> <span class="badge badge-xs badge-info">6</span></a>
 
                             <ul class="dropdown-menu dropdown-lg">
@@ -270,7 +271,7 @@
                                 </div>
                             </li>
                             <li class="active p1-bg">
-                                <a href="/"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard </span><span class="label label-rouded pull-right p3-bg note-icon">New 40+</span></a>
+                                <a href="/"><i class="fa fa-th-large"></i> <span class="nav-label">Dashboard </span>{% comment %}<span class="label label-rouded pull-right p3-bg note-icon">New 40+</span>{% endcomment %}</a>
                             </li>
                             <li class="active">
                                 <a href="#"><i class="fa fa-cog"></i> <span class="nav-label">Modulos </span><span class="fa arrow"></span></a>
@@ -280,8 +281,8 @@
                                         <a href="#"><i class="fa fa-shopping-cart"></i> Inventario <span class="fa arrow"></span></a>
                                         <ul class="nav nav-third-level">
                                             <li>
-                                                <li><a href="/app/facturacion/"><i class="fa fa-shopping-cart"></i> Facturción</a></li></li>
-                                                <li><a href="/app/productos/"><i class="fa fa-product-hunt"></i> Productos</a></li></li>
+                                                {% comment %}<li><a href="/app/facturacion/"><i class="fa fa-shopping-cart"></i> Facturción</a></li>{% endcomment %}
+                                                <li><a href="/app/productos/"><i class="fa fa-product-hunt"></i> Productos</a></li>
                                             </li>
                                         </ul>
                                     </li>
@@ -289,7 +290,7 @@
                                         <a href="#"><i class="fa fa-money"></i> Cartera <span class="fa arrow"></span></a>
                                         <ul class="nav nav-third-level">
                                             <li>
-                                                <li><a href="/app/cobranza/"><i class="fa fa-usd"></i> Cobranza</a></li>
+                                                {% comment %}<li><a href="/app/cobranza/"><i class="fa fa-usd"></i> Cobranza</a></li>{% endcomment %}
                                                 <li><a href="/app/lrecibo_provicional/" style="font-size: 12px;"><i class="fa fa-file-text"></i> Recibos Provicionales</a></li>
                                             </li>
                                         </ul>
@@ -298,12 +299,12 @@
                                 </ul>
                             </li>
                             <li>
-                                <a href="mailbox.html"><i class="fa fa-envelope"></i> <span class="nav-label">Mailbox </span><span class="fa arrow"></span></a>
+                                <a href="mailbox.html"><i class="fa fa-file-excel-o"></i> <span class="nav-label">Reportes </span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level collapse">
-                                    <li><a href="mailbox.html">Inbox</a></li>
-                                    <li><a href="mail_detail.html">Email view</a></li>
-                                    <li><a href="mail_compose.html">Compose email</a></li>
-                                </ul>
+                                    <li><a href="mailbox.html">Inventario General</a></li>
+                                    <li><a href="mail_detail.html">Pedidos</a></li>
+                                    <li><a href="mail_compose.html">Recuperacion</a></li>
+                                </ul>-
                             </li>
                             {% comment %}<li>
                                 <a href="#"><i class="fa fa-bar-chart"></i> <span class="nav-label">Graphs</span><span class="fa arrow"></span><span class="label label-rouded pull-right p3-bg note-icon">6</span></a>
@@ -466,12 +467,12 @@
                      {% block cuerpo %}
                      <div class="row">
                          <div class="col-md-3">
-                             <a href="/app/cobranza/">
+                             <a href="/app/lrecibo_provicional/">
                                <div class="widget-box clearfix">
                                    <div>
                                        <h2><i class="fa fa-usd pull-right p4-color"></i></h2>
                                        <h4>Cartera y Cobro</h4>
-                                       <h2>{{ total_cartera }}</h2>
+                                       <h2>{{ total_recuperado }}</h2>
                                    </div>
                                </div>
                              </a>
@@ -482,12 +483,12 @@
                                    <div>
                                        <h2><i class="fa fa-shopping-cart pull-right p2-color"></i></h2>
                                        <h4>Inventario y Facturacion</h4>
-                                       <h2></h2>
+                                       <h2>{{ total_vendido }}</h2>
                                    </div>
                                </div>
                              </a>
                          </div>
-             </div>
+             </div>{% comment %}
                     <div class="row">
                         <div class="col-sm-12">
                             <div class="panel panel-card recent-activites">
@@ -770,7 +771,7 @@
                                 </div>
                             </div><!-- End .panel -->
                         </div>
-                    </div>
+                    </div>{% endcomment %}
                     {% endblock cuerpo %}
                 </div>
             </div>
