--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -301,7 +301,7 @@
                             <li>
                                 <a href="mailbox.html"><i class="fa fa-file-excel-o"></i> <span class="nav-label">Reportes </span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level collapse">
-                                    <li><a href="mailbox.html">Inventario General</a></li>
+                                    <li><a href="/app/inventario_general">Inventario General</a></li>
                                     <li><a href="mail_detail.html">Pedidos</a></li>
                                     <li><a href="mail_compose.html">Recuperacion</a></li>
                                 </ul>-
