--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -302,8 +302,8 @@
                                 <a href="mailbox.html"><i class="fa fa-file-excel-o"></i> <span class="nav-label">Reportes </span><span class="fa arrow"></span></a>
                                 <ul class="nav nav-second-level collapse">
                                     <li><a href="/app/inventario_general">Inventario General</a></li>
-                                    <li><a href="mail_detail.html">Pedidos</a></li>
-                                    <li><a href="mail_compose.html">Recuperacion</a></li>
+                                    <li><a href="/app/pedidos">Pedidos</a></li>
+                                    <li><a href="/app/recuperacion">Recuperacion</a></li>
                                 </ul>-
                             </li>
                             {% comment %}<li>
