--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -49,7 +49,13 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">   Boost-Admin</a><i class="fa fa-caret-left" aria-hidden="true"></i>
+                    <a class="navbar-brand" href="#">
+                        {% if user.profile.empresa %}
+                            {{ user.profile.empresa.razon_social }}
+                        {% else %}
+                            Boost - Admin
+                        {% endif %}
+                    </a><i class="fa fa-caret-left" aria-hidden="true"></i>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <div class="search" style="display: none;">
