--- a/app/templates/cartera/partial/_recibo_provicional.html
+++ b/app/templates/cartera/partial/_recibo_provicional.html
@@ -4,7 +4,7 @@
              <div class="form-group">
                 <label class="col-sm-2 col-md-3 control-label">No Recibo:</label>
                 <div class="col-sm-10 col-md-9">
-                    <input name="no_recibo" class="form-control" type="text" placeholder="No Recibo" value="{{ no_recibo }}">
+                    <input readonly name="no_recibo" class="form-control" type="text" placeholder="No Recibo" value="{{ no_recibo }}">
                 </div>
             </div>
         </div>
