--- a/app/templates/cartera/partial/_recibo_provicional.html
+++ b/app/templates/cartera/partial/_recibo_provicional.html
@@ -49,16 +49,7 @@
             <div class="form-group">
         <label class="col-sm-2 control-label">Vendedor:</label>
         <div class="col-sm-10">
-            <select name="vendedor" class="form-control select2" disabled="disabled">
-                <option disabled="disabled">--seleccione vendedor--</option>
-                {% for vendedor in vendedores %}
-                    {% if vendedor.usuario.id == user.id %}
-                        <option selected="selected" value="{{ vendedor.id }}">{{ vendedor.usuario.get_full_name }}</option>
-                    {% else %}
-                        <option value="{{ vendedor.id }}">{{ vendedor.usuario.get_full_name }}</option>
-                    {% endif %}
-                {% endfor %}
-            </select>
+            <input type="text" name="vendedor" value="{{vendedor}}" readonly data-id="{{vendedor.id}}" class="form-control">
         </div>
     </div>
         </div>
