--- a/app/templates/inventario/productos.html
+++ b/app/templates/inventario/productos.html
@@ -172,7 +172,7 @@
                                                 '<strong style="color: #86cfef;">Nombre: </strong><br><small class="nombre">'+value.codigo+'-'+value.nombre+'</small><br>' +
                                                 '<strong style="color: #86cfef;">Marca: </strong><br><small class="marca">'+value.marca+'</small><br>' +
                                                 '<strong style="color: #86cfef;">Existencia:</strong><br><small class="existencia" style="color: #ffa200;">'+value.existencia+' Unidades</small><br>' +
-                                                '<strong style="color: #86cfef;">Precio: <br><span class="precio" style="color: #62cb31;">'+value.precio+' US$</span></strong> <br>' +
+                                                '<strong style="color: #86cfef;">Precio: <br><span class="precio" style="color: #62cb31;">'+value.precio+' C$</span></strong> <br>' +
                                             '</div>' +
                                             '<div class="col-xs-6 grey-text text-darken-4 right-align">' +
                                                 '<img class="imagezoom" height="130px" width="100%" src="'+ value.imagen +'" data-zoom-image="'+ value.imagen +'" />' +
