--- a/app/templates/inventario/partial/_pedido.html
+++ b/app/templates/inventario/partial/_pedido.html
@@ -3,7 +3,7 @@
     <div class="form-group">
         <label class="col-sm-4 control-label">Vendedor:</label>
         <div class="col-sm-8">
-            <input type="text" name="name_vendedor" value="{{ actual_vendedor }}" class="form-control" readonly>
+            <input type="text" name="name_vendedor" value="{{ actual_vendedor }}" class="form-control" readonly id="name_vendedor">
             <input name="vendedor" type="hidden" value="{{ actual_vendedor.id }}">
         </div>
     </div>
